# pg2sqlite-rs

./: AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
.claude/commands/: create-issue.md
.claude/rules/: github-issue.md  project.md
.claude/skills/adding-rule-validation/: SKILL.md
.cursor/rules/: github-issue.mdc  project.mdc
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/diagnostics/: mod.rs  reporter.rs  warning.rs
core/src/ir/: expr.rs  ident.rs  mod.rs  model.rs  types.rs
core/src/pg/: mod.rs  normalize.rs  parser.rs
core/src/sqlite/: render.rs
core/src/transform/: constraint.rs  expr_map.rs  index.rs  mod.rs  name_resolve.rs  planner.rs  topo.rs  type_map.rs
core/tests/: golden_tests.rs  integration_tests.rs
docs/: USAGE.md  development-by-rust.md  postgres-to-sqlite-rule.md  postgres-to-sqlite.md  sqlparser-rs.md
homebrew/: README.md  pg2sqlite.rb
make/: cli.mk  dev.mk  help.mk  release.mk  rust.mk  test.mk
openspec/changes/pg-to-sqlite-converter/: design.md  proposal.md  tasks.md
openspec/changes/pg-to-sqlite-converter/specs/cli-interface/: spec.md
openspec/changes/pg-to-sqlite-converter/specs/constraint-and-index-transform/: spec.md
openspec/changes/pg-to-sqlite-converter/specs/diagnostics/: spec.md
openspec/changes/pg-to-sqlite-converter/specs/pg-ddl-parsing/: spec.md
openspec/changes/pg-to-sqlite-converter/specs/sqlite-rendering/: spec.md
openspec/changes/pg-to-sqlite-converter/specs/type-and-expr-mapping/: spec.md
tests/fixtures/: alter_identity.sql  basic_table.sql  check_constraint.sql  composite_pk.sql  foreign_keys.sql  serial_types.sql  various_types.sql
tests/golden/: alter_identity.out.sql  basic_table.out.sql  check_constraint.out.sql  composite_pk.out.sql  foreign_keys.out.sql  foreign_keys_enabled.out.sql  serial_types.out.sql  various_types.out.sql
