[workspace]
members = ["core", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Hiroki Yasui"]
license = "MIT"
repository = "https://github.com/hiromaily/pg2sqlc-rs"

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
