[package]
name = "pg2sqlc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "PostgreSQL 16 DDL to SQLite3 DDL schema converter"
readme = "../README.md"
keywords = ["postgresql", "sqlite", "ddl", "converter", "cli"]
categories = ["development-tools", "command-line-utilities", "database"]

[[bin]]
name = "pg2sqlc"
path = "src/main.rs"

[dependencies]
pg2sqlc-core = { path = "../core" }
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
anyhow = "1.0"
