[package]
name = "pg2sqlite-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for converting PostgreSQL 16 DDL to SQLite3 DDL"
readme = "../README.md"
keywords = ["postgresql", "sqlite", "ddl", "converter", "schema"]
categories = ["development-tools", "command-line-utilities", "database"]

[dependencies]
sqlparser = { version = "0.53", features = ["visitor"] }
thiserror = { workspace = true }
